2007-03-09 Jens Tkotz <jens@peino.de> 1.5.6-svn-b20

 Fix: Removed PHP warning in edit_appearance

2007-03-05 Jens Tkotz <jens@peino.de> 1.5.6-svn-b19

 * Fix/Change: Added new functionality to rebuild capture dates.
               This makes it possible to fix broken dates, and also
               have correct captures dates when jhead or exiftags were
               installed later.

2007-03-04 Jens Tkotz <jens@peino.de> 1.5.6-svn-b18

 * Fix: Dont strip port from urls.

  Thanks to vgfh from forums.

2007-02-27 Jens Tkotz <jens@peino.de> 1.5.6-svn-b17

 * Fix: On some Cameras (e.g. some SONY), jhead and exiftags
        extracts some fields double and thus an reliable extraction fails.
        
   Thanks to Marcio Marchini for reporting an issue with this.
   
2007-02-27 Jens Tkotz <jens@peino.de> 1.5.6-svn-b16
 
 * Fix: Form intro now works with IDs in hidden fields.
        This fixes broken HTML/Javascript for tabs.

 * Fix: Little HTML entity "bug" in includes/definitions/albumProperties.php
 
 * Fix: Little HTML bug in view_album.php
 
2007-02-18 Jens Tkotz <jens@peino.de> 1.5.6-svn-b15

 * Fix: Missing } in css/screen.css.default
 
   Thanks to northfork from forums.
   
2007-02-09 Jens Tkotz <jens@peino.de> 1.5.6-svn-b14

 * Fix: When recursive unsetting was not applied for subalbums when
        current album was already unsetted.
        
 * Change: Remove little debug code.
 
2007-02-09 Jens Tkotz <jens@peino.de> 1.5.6-svn-b13

 * New: Added Top5 voted feature. (RFE #929207)
      "Email me when comments are added -> recursively"
      
 * Change: Enhanced Wording and error output for emailing.
 
2007-02-08 Jens Tkotz <jens@peino.de> 1.5.6-svn-b12

 * Fix: Typo in PN Version check.
 
2007-02-07 Jens Tkotz <jens@peino.de> 1.5.6-svn-b11

 * Fix/Change:
 
    In postNuke 0.8, _PN_VERSION_NUM and _PN_VERSION_ID were renamed.
    Leading _ is removed.
       
    Invented new global $GALLERY_POSTNUKE_VERSION, set in index.php
          