@@ -1,3 +1,10 @@
+2007-03-21 Jens Tkotz <jens@peino.de> 1.5.6-svn-b21
+
+ * Fix: Quotes (single and double) and backslash were not quoted in
+        imagemap.
+
+ * Fix: Little HTMLvfixes in imagemap.
+
 2007-03-09 Jens Tkotz <jens@peino.de> 1.5.6-svn-b20
 
  Fix: Removed PHP warning in edit_appearance
